--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
         "npm-run-all": "^4.1.2",
         "react": "^16.2.0",
         "react-dom": "^16.2.0",
+        "redux": "^3.7.2",
+        "react-redux": "^5.0.6",
         "react-scripts-ts": "2.13.0"
     },
     "scripts": {
