--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,11 @@
     "noImplicitThis": true,
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true,
-    "noUnusedLocals": true
+    "noUnusedLocals": true,
+    "typeRoots": [
+      "./node_modules/@types",
+      "./src/declarations"
+  ]
   },
   "exclude": [
     "node_modules",
