--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     "typeRoots": [
       "./node_modules/@types",
       "./src/declarations"
-  ]
+    ],
+    "baseUrl": "./src"
   },
   "exclude": [
     "node_modules",
